@@ -68,6 +68,7 @@ enum {
 	SIZE_CART1 = 0x02000000,
 	SIZE_CART2 = 0x02000000,
 	SIZE_CART_SRAM = 0x00008000,
+	SIZE_CART_SRAM512 = 0x00010000,
 	SIZE_CART_FLASH512 = 0x00010000,
 	SIZE_CART_FLASH1M = 0x00020000,
 	SIZE_CART_EEPROM = 0x00002000,
