@@ -151,6 +151,11 @@
                 <string>EEPROM 512 bytes</string>
                </property>
               </item>
+              <item>
+               <property name="text">
+                <string>SRAM 64kB (bootlegs only)</string>
+               </property>
+              </item>
              </widget>
             </item>
             <item row="2" column="0">
